GNOME Bugzilla – Bug 623604
After printing the number of copies are saved globally
Last modified: 2012-09-18 15:53:09 UTC
Hi, I encountered a little annoying problem with how EOG treats the printer settings. The number of copies setting is saved globally, so after printing an image with multiple copies, the next I printed another images, I accidentally got multiple copies of that as well. I would expect the number of copies printed to be reset to 1 each time an image is opened. Regards, Haggai Eran
This bug was originally reported to the One Hundred Paper Cuts project at https://bugs.launchpad.net/hundredpapercuts/+bug/154096 Has anyone has a chance to look at this yet? The undesirable behaviour still persists.
*** Bug 675800 has been marked as a duplicate of this bug. ***
Created attachment 220073 [details] [review] Remove global printer settings This often catches me out that the no. copies was set the the previous session's value (often with many weeks ago) which usually means printing with the wrong settings.
Created attachment 220076 [details] [review] fixup a few related #DEFINES and update the header file after removing the functions Remove global printer settings fixup a few related #DEFINES and update the header file after removing the functions
This removes keeping of print settings completely. Not sure if that isn't too much. Maybe we could just remove some specific parameters before saving?
I think the same principle applies for the other settings, no other applications saves your printer settings on starting a new session, so it's not an expected behaviour. You may also want different settings depending on which printer you're using. I can roll a "not n-copies" patch if that would helpful - that's the main tree killer here!
Yes, only stripping the n-copies setting would be a good start here and probably less intrusive.
Created attachment 224488 [details] [review] Set the saved value for the number of copies printed to 1
Thanks! I'll close this as the main problem here was the number of pages. If keeping the other settings keeps bugging you we can handle this separately. --- commit 6e3bd83c946d4a932393acfff47f778843e49331 Author: Michael Wood <> Date: Mon Sep 17 11:34:59 2012 +0100 Set the saved value for the number of copies printed to 1 This avoids accidentally printing the wrong amount as this value is not expected to be restored from previous sessions. https://bugzilla.gnome.org/show_bug.cgi?id=623604 --- This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.