Set the saved value for the number of copies printed to 1

This avoids accidentally printing the wrong amount as this value is not
expected to be restored from previous sessions.

https://bugzilla.gnome.org/show_bug.cgi?id=623604